# Apiplay

./: Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs  mainLast.rs  state.rs
src/infra/: endpoints.rs  mod.rs
src/modules/music/: domain.rs  mod.rs
src/modules/music/infra/: dtos.rs  endpoints copy.rs  endpoints.rs  mod.rs
