[package]
name = "apiplay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
serde = { version="1.0.137", features=["derive"]} # sirve para serializar y deserializar estructuras de datos.
serde_json="1.0" # sirve para serializar y deserializar estructuras de datos en formato JSON